# rs-observer

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml
examples/: observer.yaml  producer.rs
proto/: README.md  example.proto
src/: app.rs  catalog.rs  config.rs  decoder.rs  export.rs  lib.rs  main.rs  producer.rs  projection.rs  proto_registry.rs  redis_client.rs  session.rs  stream_id.rs  workers.rs
src/ui/: input.rs  mod.rs  model.rs  render.rs
tests/: app_tests.rs  config_tests.rs  decoder_tests.rs  export_tests.rs  input_tests.rs  producer_tests.rs  projection_tests.rs  redis_command_tests.rs  stream_id_tests.rs  ui_model_tests.rs  ui_render_tests.rs
