[package]
name = "rs-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
hex = "0.4"
prost = "0.13"
redis = { version = "1.2", features = ["aio", "tokio-comp", "connection-manager", "cluster-async"] }
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
